# compression_dictionaries

./: 000M.dict.zst  001M.dict.zst  002M.dict.zst  003M.dict.zst  004M.dict.zst  005M.dict.zst  006M.dict.zst  007M.dict.zst  008M.dict.zst  009M.dict.zst  010M.dict.zst  011M.dict.zst  012M.dict.zst  013M.dict.zst  014M.dict.zst  015M.dict.zst  016M.dict.zst  017M.dict.zst  018M.dict.zst  019M.dict.zst  020M.dict.zst  021M.dict.zst  022M.dict.zst  023M.dict.zst  024M.dict.zst  025M.dict.zst  026M.dict.zst  027M.dict.zst  028M.dict.zst  029M.dict.zst  030M.dict.zst  031M.dict.zst  032M.dict.zst  033M.dict.zst  034M.dict.zst  035M.dict.zst  036M.dict.zst  037M.dict.zst  038M.dict.zst  039M.dict.zst  (+68 more)
utils/: sample_blocks.py
